--- a/hoge.tex
+++ b/hoge.tex
@@ -6,19 +6,30 @@
 \bibliographystyle{jecon}
 \bibpunct[:]{(}{)}{,}{a}{}{,}
 
-\title{This is Title}
-\author{法学政治学研究科 総合法政専攻 修士1年 辻村 優毅}
+\title{What makes Legislative Attention: Institutional Characteristics of Political Attention}
+\author{Yuki TSUJIMURA}
 \date{Date}
 
 \begin{document}
 
 \maketitle
 
-\section{This is Section}
-　Write main texts here.
+\section*{Introduction}
+　政治的形成過程
 
-\subsection{This is Subsection}
-　Write main texts here.
+\section*{Literature}
+
+\section*{Theory}
+
+\section*{Hypothesis}
+
+\section*{Data \& Method}
+
+\section*{Result}
+
+\section*{Discussion}
+
+\section*{Conclusion}
 
 \bibliography{reference}
 \end{document}
