--- a/writings/reference.bib
+++ b/writings/reference.bib
@@ -1,1 +1,229 @@
-% This is blank .bib file.
+% The entry below contains non-ASCII chars that could not be converted
+% to a LaTeX equivalent.
+
+@ARTICLE{Jones2004-ou,
+  title     = "Representation and agenda setting",
+  author    = "Jones, B D and Baumgartner, F R",
+  abstract  = "We develop a new approach to the study of representation based
+               on agenda setting and attention allocation. We ask the
+               fundamental question: do the policy priorities of the public and
+               of the government correspond across time? To assess the policy
+               priorities of the mass public, we have coded the Most Important
+               Problem data from Gallup polls across the postwar period into
+               the policy content categories developed by the Policy Agendas
+               Project (Baumgartner and Jones, 2002). Congressional priorities
+               were assessed by the proportion of total hearings in a given
+               year focusing on those same policy categories, also from the
+               Agendas Project. We then conducted similar analyses on public
+               laws and most important laws, similarly coded. Finally we
+               analyzed the spatial structure of public and congressional
+               agendas using the Shepard-Kruskal non-metric multidimensional
+               scaling algorithm. Findings may be summarized as follows: First,
+               there is an impressive congruence between the priorities of the
+               public and the priorities of Congress across time. Second, there
+               is substantial evidence of congruence between the priorities of
+               the public and lawmaking in the national government, but the
+               correspondence is attenuated in comparison to agendas. Third,
+               although the priorities of the public and Congress are
+               structurally similar, the location of issues within the
+               structure differs between Congress and the general public. The
+               public ``lumps'' its evaluation of the nations most important
+               problems into a small number of categories. Congress ``splits''
+               issues out, handling multiple issues simultaneously. Finally,
+               the public tends to focus on a very constrained set of issues,
+               but Congress juggles many more issues. The article has strong
+               implications for the study of positional representation as well,
+               because for traditional representation to occur, there must be
+               correspondence between the issue-priorities of the public and
+               the government. We find substantial evidence for such attention
+               congruence here. \copyright{} 2004 The Policy Studies Journal
+               Published Blackwell Publishing. Inc.",
+  journal   = "Policy Stud. J.",
+  publisher = "Blackwell Publishing Inc.",
+  volume    =  32,
+  number    =  1,
+  pages     = "1--24",
+  year      =  2004,
+  keywords  = "legislation; local participation; planning method; policy
+               analysis; North America; United States"
+}
+
+@INCOLLECTION{Baumgartner2009-eb,
+  title     = "Lobbying and policy change",
+  booktitle = "Lobbying and Policy Change",
+  author    = "Baumgartner, Frank R and Berry, Jeffrey M and Hojnacki, Marie
+               and Leech, Beth L and Kimball, David C",
+  abstract  = "… from our use of the concept of lobbying ``sides'' in the
+               policy struggle. As we discussed above, … But when we look for a
+               direct and simple relationship between money and policy change ,
+               it …",
+  publisher = "University of Chicago Press",
+  year      =  2009
+}
+
+@BOOK{Baumgartner2020-ee,
+  title     = "The Politics of Information",
+  author    = "Baumgartner, Frank R and Jones, Bryan D",
+  abstract  = "How does the government decide what's a problem and what isn't?
+               And what are the consequences of that process? Like individuals,
+               Congress is subject to the ``paradox of search.'' If policy
+               makers don't look for problems, they won't find those that need
+               to be addressed. But if they carry out a thorough search, they
+               will almost certainly find new problems---and with the
+               definition of each new problem comes the possibility of creating
+               a government program to address it. With The Politics of
+               Attention, leading policy scholars Frank R. Baumgartner and
+               Bryan D. Jones demonstrated the central role attention plays in
+               how governments prioritize problems. Now, with The Politics of
+               Information, they turn the focus to the problem-detection
+               process itself, showing how the growth or contraction of
+               government is closely related to how it searches for information
+               and how, as an organization, it analyzes its findings. Better
+               search processes that incorporate more diverse viewpoints lead
+               to more intensive policymaking activity. Similarly, limiting
+               search processes leads to declines in policy making. At the same
+               time, the authors find little evidence that the factors usually
+               thought to be responsible for government expansion---partisan
+               control, changes in presidential leadership, and shifts in
+               public opinion---can be systematically related to the patterns
+               they observe. Drawing on data tracing the course of American
+               public policy since World War II, Baumgartner and Jones once
+               again deepen our understanding of the dynamics of American
+               policy making.",
+  publisher = "University of Chicago Press",
+  month     =  dec,
+  year      =  2020,
+  keywords  = "public policy; government; legislation; welfare; intervention;
+               congress; problems; policymaking; partisan control; presidential
+               leadership; opinion; information management; society; senate;
+               technology; search; republicans; regulation; race; racism;
+               partisanship; poverty; democrats; obama; political science;
+               interest groups; lobbying; intrusiveness; media; confirmation
+               bias; spending; funding; federalism; agencies; defense;
+               complexity; censorship; budget; nonfiction; history; politics",
+  language  = "en"
+}
+
+@BOOK{Baumgartner2010-rl,
+  title     = "Agendas and Instability in American Politics, Second Edition",
+  author    = "Baumgartner, Frank R and Jones, Bryan D",
+  abstract  = "When Agendas and Instability in American Politics appeared
+               fifteen years ago, offering a profoundly original account of how
+               policy issues rise and fall on the national agenda, the Journal
+               of Politics predicted that it would ``become a landmark study of
+               public policy making and American politics.'' That prediction
+               proved true and, in this long-awaited second edition, Bryan
+               Jones and Frank Baumgartner refine their influential argument
+               and expand it to illuminate the workings of democracies beyond
+               the United States. The authors retain all the substance of their
+               contention that short-term, single-issue analyses cast public
+               policy too narrowly as the result of cozy and dependable
+               arrangements among politicians, interest groups, and the media.
+               Jones and Baumgartner provide a different interpretation by
+               taking the long view of several issues---including nuclear
+               energy, urban affairs, smoking, and auto safety---to demonstrate
+               that bursts of rapid, unpredictable policy change punctuate the
+               patterns of stability more frequently associated with
+               government. Featuring a new introduction and two additional
+               chapters, this updated edition ensures that their findings will
+               remain a touchstone of policy studies for many years to come.",
+  publisher = "University of Chicago Press",
+  month     =  mar,
+  year      =  2010,
+  language  = "en"
+}
+
+@ARTICLE{Bertelli2013-zq,
+  title     = "Public Policy Investment: Risk and Return in British Politics",
+  author    = "Bertelli, Anthony M and John, Peter",
+  abstract  = "This article sets out and tests a theory of public policy
+               investment -- how democratic governments seek to enhance their
+               chances of re-election by managing a portfolio of policy
+               priorities for the public, analogous to the relationship between
+               investment manager and client. Governments choose policies that
+               yield returns the public values; and rebalance their policy
+               priorities later to adjust risk and stabilize return. Do the
+               public reward returns to policy capital or punish risky policy
+               investments? The article investigates whether returns to policy
+               investment guide political management and statecraft.
+               Time-series analyses of risk and return in Britain 1971--2000
+               reveal that risk and return on government policy portfolios
+               predict election outcomes, and that returns, risk profiles and
+               the uncertainty in public signals influence the prioritization
+               of policies.",
+  journal   = "Br. J. Polit. Sci.",
+  publisher = "Cambridge University Press",
+  volume    =  43,
+  number    =  4,
+  pages     = "741--773",
+  month     =  oct,
+  year      =  2013
+}
+
+@BOOK{Birkland1997-lq,
+  title     = "After Disaster: Agenda Setting, Public Policy, and Focusing
+               Events",
+  author    = "Birkland, Thomas A",
+  abstract  = "Disasters like earthquakes are known as focusing events--sudden
+               calamities that cause both citizens and policymakers to pay more
+               attention to a public problem and often to press for solutions.
+               This book, the first comprehensive analysis of these dramatic
+               events, explains how and why some public disasters change
+               political agendas and, ultimately, public policies. Thomas A.
+               Birkland explores important successes and failures in the policy
+               process by analyzing the political outcomes of four types of
+               events: earthquakes, hurricanes, oil spills, and nuclear
+               accidents. Using this empirical data to go beyond an intuitive
+               understanding of focusing events, he presents a theory of where
+               and when these events will gain attention and how they trigger
+               political reactions. Birkland concludes that different types of
+               disasters result in different kinds of agenda politics. Public
+               outrage over the highly visible damage caused by the Exxon
+               Valdez oil spill, for example, ended a fourteen-year logjam
+               holding back Congressional legislation to regulate oil spill
+               cleanups. On the other hand, the intangible effects of Three
+               Mile Island had less concrete results in a political arena that
+               was already highly polarized. Integrating a variety of theories
+               on the policy process, including agenda setting, policy
+               communities, advocacy coalitions, the political aspects of the
+               news media, and the use of symbols in political debate, Birkland
+               illuminates the dynamics of event-driven policy activity. As the
+               first extensive study of its kind, this book offers new insights
+               into the policy process.",
+  publisher = "Georgetown University Press",
+  year      =  1997,
+  language  = "en"
+}
+
+@ARTICLE{Birkland1998-xp,
+  title     = "Focusing Events, Mobilization, and Agenda Setting",
+  author    = "Birkland, Thomas A",
+  abstract  = "[The policy literature often mentions the agenda-setting
+               influence of focusing events, but few policy studies
+               systematically examine the dynamics of these events. This
+               article closes this gap by examining focusing events, group
+               mobilization and agenda-setting. Using natural disasters and
+               industrial accidents as examples, most focusing events change
+               the dominant issues on the agenda in a policy domain, they can
+               lead to interest group mobilization, and groups often actively
+               seek to expand or contain issues after a focusing event. I
+               explain how differences in the composition of policy communities
+               and the nature of the events themselves influence group and
+               agenda dynamics. The organization of policy communities is an
+               important factor in agenda setting, but agenda setting and group
+               politics vary considerably with the type of event and the nature
+               of the policy community.]",
+  journal   = "J. Public Policy",
+  publisher = "Cambridge University Press",
+  volume    =  18,
+  number    =  1,
+  pages     = "53--74",
+  year      =  1998
+}
+
+@BOOK{Sabatier1993-id,
+  title     = "Policy change and learning: An advocacy coalition approach",
+  author    = "Sabatier, Paul A and Jenkins-Smith, Hank C",
+  publisher = "Westview press",
+  year      =  1993
+}
