--- a/writings/hoge.tex
+++ b/writings/hoge.tex
@@ -15,15 +15,33 @@
 \maketitle
 
 \section*{Introduction}
-　政治的形成過程
+　既存の政策が変化する要因をめぐっては多くの議論がなされてきた。\citet*{Baumgartner2010-rl}は政策が強い固着性を持ち、一定期間の安定性と突然の急激な変化によって特徴づけられることを指摘した。その中で、安定性を持った政策領域に新しい対立の観点がもたらされ、それが政治空間全体に広がることによって急激で大規模な変化が生じると論じた。\citep*{Baumgartner2010-rl}\\
+　JonesとBaumgartnerによる一連の分析\citep*{Baumgartner2010-rl, Baumgartner2009-eb,Baumgartner2020-ee}は政策変化の容態を描き出す上で非常に有益な枠組みを提示した一方で、なぜある時に特定の政策領域が注目を集め、急激な政策変化がるのかという問題が大きな争点となってきた。これらは大別すると、外性的要因による説明と内生的要因による説明とに分類することができる。外性的要因に着目する分析では、自然災害などの焦点となる要因によって特定の政策領域に注目が集まるとする議論\citep*{Birkland1997-lq,Birkland1998-xp}、外性的要因が政治的連合の変化\citep*{Sabatier1993-id}や有権者の関心の変化\citep*{Bertelli2013-zq}をもたらすことで特定の政策領域が注目されるとする議論などがある。他方、内生的要因に着目する議論としては知識の更新によって政治的状況の変化を説明する議論\citep*{Baumgartner2010-rl}などが存在している。\\
+　どの政策領域が注目を集めるのかという問題は、多くの理論的立場が存在する一方で経験的な知見は十分に蓄積されてきたわけではない。Comparative Agendas Projectはいかなる場合にどの政策領域が強い関心の対象となるのかを比較政治的に分析している。しかしながら、政策を変化させるという現象を分析する中で最も重要な立法府については十分な知見が蓄積されていない。\\
+　例外的に\citet*{Jones2004-ou}は、議会において特定の政策領域に対してどの程度注目が集まるかを分析し、その動向が有権者の関心と一致していると指摘している。他方で、この分析は政策領域への関心の変化を扱っており、法案単位で分析を行なっているわけではない。\\
+　制度的特徴とは、政策変化をもたらす意思決定における手続きとそれを規定する内在的制約条件である。\\
+　本稿では、議会における政策過程を対象として、議会の持つ決定手続とその行使のされ方を分析することで、政策過程における制度的特徴の重要性を検討する。\\
 
 \section*{Literature}
+\subsection*{Policy Process \& Focus Point}
+　政策過程研究において、特定の政策領域が注目されることの重要性は多くの先行研究において指摘されてきた。
+
+\subsection*{Focus Point in the Congress}
+　議会における注目法案の形成は大きく二つの研究領域において検討されてきた。\\
+　第一に、政策過程研究において特定の領域が注目されるアジェンダ・セッティングの議論が存在する。\\
+　第二に、議会研究においてどの法案が検討されるのかを問題にする、アジェンダ・コントロールの議論が存在する。\\
+　これらの議論は、議会において法案が注目される過程とその要因を説明する上で有益な視座を与える。しかし、重要な課題も存在する。\\
+　第一に、アジェンダ・コントロール論では、議会内における法案の動向を十分に把握することは困難である。例えば、アジェンダ・コントロールが発揮されるか否かは\\
+　第二に、より重要な問題として、
 
 \section*{Theory}
+　では、議会において特定の法案が重要視されるためには、いかなる条件が必要だろうか。第一に、議会研究の文脈では法案は議会指導部によって多数派政党に都合の良い形でスクリーニングされると考えられてきた。
+　
 
 \section*{Hypothesis}
 
 \section*{Data \& Method}
+　分析には、
 
 \section*{Result}
 
