--- a/writings/hoge.tex
+++ b/writings/hoge.tex
@@ -15,21 +15,20 @@
 \maketitle
 
 \section*{Introduction}
-　既存の政策が変化する要因をめぐっては多くの議論がなされてきた。\citet*{Baumgartner2010-rl}は政策が強い固着性を持ち、一定期間の安定性と突然の急激な変化によって特徴づけられることを指摘した。その中で、安定性を持った政策領域に新しい対立の観点がもたらされ、それが政治空間全体に広がることによって急激で大規模な変化が生じると論じた。\citep*{Baumgartner2010-rl}\\
-　JonesとBaumgartnerによる一連の分析\citep*{Baumgartner2010-rl, Baumgartner2009-eb,Baumgartner2020-ee}は政策変化の容態を描き出す上で非常に有益な枠組みを提示した一方で、なぜある時に特定の政策領域が注目を集め、急激な政策変化がるのかという問題が大きな争点となってきた。これらは大別すると、外性的要因による説明と内生的要因による説明とに分類することができる。外性的要因に着目する分析では、自然災害などの焦点となる要因によって特定の政策領域に注目が集まるとする議論\citep*{Birkland1997-lq,Birkland1998-xp}、外性的要因が政治的連合の変化\citep*{Sabatier1993-id}や有権者の関心の変化\citep*{Bertelli2013-zq}をもたらすことで特定の政策領域が注目されるとする議論などがある。他方、内生的要因に着目する議論としては知識の更新によって政治的状況の変化を説明する議論\citep*{Baumgartner2010-rl}などが存在している。\\
-　どの政策領域が注目を集めるのかという問題は、多くの理論的立場が存在する一方で経験的な知見は十分に蓄積されてきたわけではない。Comparative Agendas Projectはいかなる場合にどの政策領域が強い関心の対象となるのかを比較政治的に分析している。しかしながら、政策を変化させるという現象を分析する中で最も重要な立法府については十分な知見が蓄積されていない。\\
-　例外的に\citet*{Jones2004-ou}は、議会において特定の政策領域に対してどの程度注目が集まるかを分析し、その動向が有権者の関心と一致していると指摘している。他方で、この分析は政策領域への関心の変化を扱っており、法案単位で分析を行なっているわけではない。\\
-　制度的特徴とは、政策変化をもたらす意思決定における手続きとそれを規定する内在的制約条件である。\\
-　本稿では、議会における政策過程を対象として、議会の持つ決定手続とその行使のされ方を分析することで、政策過程における制度的特徴の重要性を検討する。\\
+　既存の政策が変化する要因をめぐっては多くの議論がなされてきた。\\
+　JonesとBaumgartnerによる一連の分析\citep*{Baumgartner2010-rl, Baumgartner2009-eb,Baumgartner2020-ee}は政策変化の容態を描き出す上で非常に有益な枠組みを提示した。\citet*{Baumgartner2010-rl}は政策が強い固着性を持ち、一定期間の安定性と突然の急激な変化によって特徴づけられることを指摘した。こうした現象が生じるメカニズムとして、安定性を持った政策領域に新しい対立の観点がもたらされ、それが政治空間全体に広がることによって急激で大規模な変化が生じると論じた。\citep*{Baumgartner2010-rl}このような過程として政策変化を論じる見方は断続均衡理論として知られ、政策変化に対する重要な見方として位置付けられている。\citep*{Howlett2009-tn,John2018-im}\\
+　しかしながら、断続均衡理論は「なぜ政策は変化するのか」に対する回答を提示するものの、「特定のタイミングで、なぜ特定の政策のみが重要な争点となり、変化をもたらすのか」という問題に対して十分な回答をもたらしたとは言えない。\citep*{John2018-im}この点をめぐり、さまざまな視座から検討がなされてきた。これらは大別すると、外性的要因による説明と内生的要因による説明とに分類することができる。外性的要因に着目する分析では、自然災害などの焦点となる要因によって特定の政策領域に注目が集まるとする議論\citep*{Birkland1997-lq,Birkland1998-xp}、外性的要因が政治的連合の変化\citep*{Sabatier1993-id}や有権者の関心の変化\citep*{Bertelli2013-zq}をもたらすことで特定の政策領域が注目されるとする議論などがある。内生的要因に着目する議論としては知識の更新によって政治的状況の変化を説明する議論\citep*{Baumgartner2010-rl}などが存在している。\\
+　このように、どの政策領域が注目を集めるのかという問題は、多くの理論的立場が存在する一方で、特に議会をめぐって経験的な知見は十分に蓄積されてきたわけではない。例外的に\citet*{Jones2004-ou}は、議会において特定の政策領域に対してどの程度注目が集まるかを分析し、その動向が有権者の関心と一致していると指摘している。しかし、この分析は政策領域への関心の変化を扱っており、法案単位で分析を行なっているわけではない。\\
+　本稿では、議会における政策過程を対象として、政策変化をもたらすと考えられてきた「法案が重要な関心をもたれる」という現象がいかなる要因によってもたらされてきたかを分析する。\\
 
 \section*{Literature}
 \subsection*{Policy Process \& Focus Point}
 　政策過程研究において、特定の政策領域が注目されることの重要性は多くの先行研究において指摘されてきた。
 
 \subsection*{Focus Point in the Congress}
-　議会における注目法案の形成は大きく二つの研究領域において検討されてきた。\\
+　議会において、「法案が重要な関心をもたれる」という現象は、大きく二つの研究領域において検討されてきた。第一には政策過程論の文脈であり、いかなる法案が注目されるのかを外生的・内生的な要因から説明する試みである。第二に、議会研究の文脈では「どの法案が真剣な議論の対象となるのか」という問題設定から議会内政党に着目した分析が蓄積されてきた。\\
 　第一に、政策過程研究において特定の領域が注目されるアジェンダ・セッティングの議論が存在する。\\
-　第二に、議会研究においてどの法案が検討されるのかを問題にする、アジェンダ・コントロールの議論が存在する。\\
+　第二に、議会研究においてどの法案が検討されるのかを問題にする、アジェンダ・コントロールの議論が存在する。アジェンダ・コントロール論において重要な問題関心は、議会内政党がどの程度まで影響力を行使しうるのかという問題であり、政党指導部が強い影響力を有するという立場\citep*{Cox2005-pn,Cox2007-xq}から議会内において重要なのは政党ではなく議会における中位投票者の立ち位置であるとする議論\citep*{Krehbiel2010-ob}までさまざまな理論的立場が示されている。近年の実証研究の見地では中位投票者による説明を支持するもの\citep*{Gray2019-sv}から両者の存在を指摘するもの\citep*{Crosson2019-xb}、議会内政党の影響力を強調するもの\citep*{Clark2012-lk}までさまざまである。\\
 　これらの議論は、議会において法案が注目される過程とその要因を説明する上で有益な視座を与える。しかし、重要な課題も存在する。\\
 　第一に、アジェンダ・コントロール論では、議会内における法案の動向を十分に把握することは困難である。例えば、アジェンダ・コントロールが発揮されるか否かは\\
 　第二に、より重要な問題として、
