--- a/writings/reference.bib
+++ b/writings/reference.bib
@@ -221,6 +221,185 @@
   year      =  1998
 }
 
+@ARTICLE{Clark2012-lk,
+  title    = "Examining parties as procedural cartels: Evidence from the {U.S}.
+              States",
+  author   = "Clark, J H",
+  abstract = "Procedural cartel theory states that the majority party exerts
+              influence over legislative outcomes through agenda control. This
+              research tests predictions from the party cartel theory in five
+              state legislatures. I assess party influence through comparison
+              of term-limited and nonterm-limited legislators. I argue that
+              term-limited legislators (who are not seeking elective office)
+              are no longer susceptible to party pressure, making them the
+              perfect means to determine the existence of party influence. The
+              results demonstrate that party influence is present in these
+              legislatures. I find that party influence is magnified on the
+              procedural, rather than final-passage, voting record which is
+              precisely where procedural cartel theory predicts. I find lower
+              levels of ideological consistency and party discipline among
+              members for whom the party leadership offers the least-those
+              leaving elective office. These results provide support for party
+              cartel theory, demonstrating further evidence of how parties
+              matter in modern democracies. \copyright{} 2012 The Comparative
+              Legislative Research Center of The University of Iowa.",
+  journal  = "Legislative Studies Quarterly",
+  volume   =  37,
+  number   =  4,
+  pages    = "491--507",
+  year     =  2012
+}
+
+@BOOK{Cox2007-xq,
+  title     = "Legislative Leviathan: Party Government in the House",
+  author    = "Cox, Gary W and McCubbins, Mathew D",
+  abstract  = "The second edition of Legislative Leviathan provides an incisive
+               new look at the inner workings of the House of Representatives
+               in the post-World War II era. Re-evaluating the role of parties
+               and committees, Gary W. Cox and Mathew D. McCubbins view parties
+               in the House - especially majority parties - as a species of
+               'legislative cartel'. These cartels seize the power,
+               theoretically resident in the House, to make rules governing the
+               structure and process of legislation. Most of the cartel's
+               efforts are focused on securing control of the legislative
+               agenda for its members. The first edition of this book had
+               significant influence on the study of American politics and is
+               essential reading for students of Congress, the presidency, and
+               the political party system.",
+  publisher = "Cambridge University Press",
+  month     =  mar,
+  year      =  2007,
+  language  = "en"
+}
+
+@BOOK{Cox2005-pn,
+  title     = "Setting the Agenda: Responsible Party Government in the {U.S}.
+               House of Representatives",
+  author    = "Cox, Gary W and McCubbins, Mathew D",
+  abstract  = "Scholars of the U.S. House disagree over the importance of
+               political parties in organizing the legislative process. On the
+               one hand, non-partisan theories stress how congressional
+               organization serves members' non-partisan goals. On the other
+               hand, partisan theories argue that the House is organized to
+               serve the collective interests of the majority party. This book
+               advances a partisan theory and presents a series of empirical
+               tests of that theory's predictions (pitted against others). The
+               evidence demonstrates that the majority party seizes agenda
+               control at nearly every stage of the legislative process in
+               order to prevent bills that the party dislikes from reaching the
+               floor.",
+  publisher = "Cambridge University Press",
+  month     =  sep,
+  year      =  2005,
+  language  = "en"
+}
+
+@ARTICLE{Crosson2019-xb,
+  title     = "Stalemate in the States: Agenda Control Rules and Policy Output
+               in American Legislatures",
+  author    = "Crosson, J M",
+  abstract  = "This article examines how the power of majority-party leaders to
+               set the legislative voting calendar influences policy change in
+               American state legislatures. By generating an opportunity for
+               party leaders to exercise gatekeeping or negative agenda
+               control, such rules introduce an additional partisan veto player
+               into a system of governance. This addition typically increases
+               the size of the core or gridlock interval, which drives policy
+               change downward. Using both traditional data on bill passage
+               counts and new data on Affordable Care Act compliance, I find
+               strong support for these claims. More specifically, when I
+               calculate core sizes that are sensitive to agenda rules, I find
+               that agenda-control-adjusted core size is negatively correlated
+               with policy change, as expected. Moreover, even when I match
+               states on their overall preference dispersion or polarization,
+               the ability of party leaders to exercise negative agenda control
+               is strongly negatively associated with policy change.
+               \copyright{} 2018 Washington University in St. Louis",
+  journal   = "Legislative Studies Quarterly",
+  publisher = "Wiley-Blackwell",
+  volume    =  44,
+  number    =  1,
+  pages     = "3--33",
+  year      =  2019
+}
+
+@ARTICLE{Gray2019-sv,
+  title     = "Pivotal Politics and the ideological content of Landmark Laws",
+  author    = "Gray, T R and Jenkins, J A",
+  abstract  = "The Pivotal Politics model (Krehbiel) has significantly
+               influenced the study of American politics, but its core
+               empirical prediction - that the size of the gridlock interval is
+               negatively related to legislative productivity - has not found
+               strong empirical support. We argue that previous research
+               featured a disconnect between the exclusively ideological theory
+               and tests that relied on outcome variables that were not purely
+               ideological. We remedy this by dividing landmark laws (Mayhew)
+               into two counts - those that invoke ideological preferences and
+               those that do not - and uncover results consistent with Pivotal
+               Politics' core prediction: the size of the gridlock interval is
+               negatively related to the production of ideological legislation.
+               We also find that the size of the gridlock zone is positively
+               related to the production of nonideological legislation. These
+               results hold up in the face of various sensitivity analyses and
+               robustness checks. We further show that Pivotal Politics
+               explains variation in ideological legislation better than
+               alternative theories based on partisan agenda control.
+               \copyright{} 2017 Cambridge University Press.",
+  journal   = "J. Public Policy",
+  publisher = "Cambridge University Press",
+  volume    =  39,
+  number    =  1,
+  pages     = "115--142",
+  year      =  2019,
+  keywords  = "gridlock; lawmaking; legislative productivity; pivotal politics;
+               spatial models; US Congress; legislative implementation; policy
+               making; political ideology; political theory; state role;
+               theoretical study; United States"
+}
+
+@BOOK{Howlett2009-tn,
+  title     = "Studying public policy: Policy cycles and policy subsystems",
+  author    = "Howlett, Michael and Ramesh, Michael and Perl, Anthony and
+               {Others}",
+  publisher = "Oxford University Press Oxford",
+  volume    =  3,
+  year      =  2009
+}
+
+@INCOLLECTION{John2018-im,
+  title     = "Agenda formation and change",
+  booktitle = "Handbook on Policy, Process and Governing",
+  author    = "John, Peter",
+  abstract  = "Research on the policy agenda offers a unique perspective on how
+               public decisions are made and implemented, in particular
+               highlighting the influence of the mass media and the salience of
+               ideas and argumentation. This chapter contains a summary of
+               agenda-setting theory in the classic works of public policy,
+               followed by a review of the policy agendas approach as advocated
+               by Baumgartner and Jones in the research on punctuated
+               equilibrium. Then a more critical viewpoint is offered, which
+               suggests that writers on agenda-setting find it hard to make
+               causal inferences about the sources of change in public policy.",
+  publisher = "Edward Elgar Publishing",
+  month     =  dec,
+  year      =  2018,
+  language  = "en"
+}
+
+% The entry below contains non-ASCII chars that could not be converted
+% to a LaTeX equivalent.
+@INCOLLECTION{Krehbiel2010-ob,
+  title     = "Pivotal politics",
+  booktitle = "Pivotal Politics",
+  author    = "Krehbiel, Keith",
+  abstract  = "This book is about conflict in the executive and legislative
+               branches of government. How is such conflict resolved? Why is it
+               so often not resolved, or resolved unsatisfactorily in the eyes
+               …",
+  publisher = "University of Chicago Press",
+  year      =  2010
+}
+
 @BOOK{Sabatier1993-id,
   title     = "Policy change and learning: An advocacy coalition approach",
   author    = "Sabatier, Paul A and Jenkins-Smith, Hank C",
