--- a/writings/hoge.tex
+++ b/writings/hoge.tex
@@ -14,24 +14,36 @@
 
 \maketitle
 
-\section*{Introduction}
+\section{Introduction}
 　既存の政策が変化する要因をめぐっては多くの議論がなされてきた。\\
 　JonesとBaumgartnerによる一連の分析\citep*{Baumgartner2010-rl, Baumgartner2009-eb,Baumgartner2020-ee}は政策変化の容態を描き出す上で非常に有益な枠組みを提示した。\citet*{Baumgartner2010-rl}は政策が強い固着性を持ち、一定期間の安定性と突然の急激な変化によって特徴づけられることを指摘した。こうした現象が生じるメカニズムとして、安定性を持った政策領域に新しい対立の観点がもたらされ、それが政治空間全体に広がることによって急激で大規模な変化が生じると論じた。\citep*{Baumgartner2010-rl}このような過程として政策変化を論じる見方は断続均衡理論として知られ、政策変化に対する重要な見方として位置付けられている。\citep*{Howlett2009-tn,John2018-im}\\
 　しかしながら、断続均衡理論は「なぜ政策は変化するのか」に対する回答を提示するものの、「特定のタイミングで、なぜ特定の政策のみが重要な争点となり、変化をもたらすのか」という問題に対して十分な回答をもたらしたとは言えない。\citep*{John2018-im}この点をめぐり、さまざまな視座から検討がなされてきた。これらは大別すると、外性的要因による説明と内生的要因による説明とに分類することができる。外性的要因に着目する分析では、自然災害などの焦点となる要因によって特定の政策領域に注目が集まるとする議論\citep*{Birkland1997-lq,Birkland1998-xp}、外性的要因が政治的連合の変化\citep*{Sabatier1993-id}や有権者の関心の変化\citep*{Bertelli2013-zq}をもたらすことで特定の政策領域が注目されるとする議論などがある。内生的要因に着目する議論としては知識の更新によって政治的状況の変化を説明する議論\citep*{Baumgartner2010-rl}などが存在している。\\
-　このように、どの政策領域が注目を集めるのかという問題は、多くの理論的立場が存在する一方で、特に議会をめぐって経験的な知見は十分に蓄積されてきたわけではない。例外的に\citet*{Jones2004-ou}は、議会において特定の政策領域に対してどの程度注目が集まるかを分析し、その動向が有権者の関心と一致していると指摘している。しかし、この分析は政策領域への関心の変化を扱っており、法案単位で分析を行なっているわけではない。\\
-　本稿では、議会における政策過程を対象として、政策変化をもたらすと考えられてきた「法案が重要な関心をもたれる」という現象がいかなる要因によってもたらされてきたかを分析する。\\
+　このように、どの政策領域が注目を集めるのかという問題は、多くの理論的立場が存在するものの、経験的な知見は十分に蓄積されてきたとは言い難い。Comparative Agendas Projectはこれらの課題に対して、複数国の比較を可能とするデータセットを構築した点で重要な貢献であるが、このデータを用いて、特定の政策領域で注目が形成される要因についての分析は十分になされてきたとは言えない。\\
+　本稿では、議会という政策過程が展開する特定のフィールドに焦点を当て、議会における政策的な注目が形成される要因を分析することを通じて、「法案が重要な関心をもたれる」という現象がいかなる要因によってもたらされてきたかを分析する。\\
 
-\section*{Literature}
-\subsection*{Policy Process \& Focus Point}
-　政策過程研究において、特定の政策領域が注目されることの重要性は多くの先行研究において指摘されてきた。
+\section{問題状況}
+\subsection{Policy Process \& Focus Point}
+　政策変化がいかにもたらされるかについては、多くの先行研究がその要因を分析してきた。古典的研究として、\\
+　\citet*{Kingdon1984-oq, Kingdon2013-ac}は、組織的意思決定のゴミ缶モデル\citep*{Cohen1972-ym}を応用した大統領府の分析を通じて政策変化をもたらす要因を論じたことで、近年の政策変化にかかわる議論の素地を提供した。「3つの流れモデル(Multiple Stream Framework, MSF)」と呼ばれるこのモデルは、政策変化をもたらす過程を「問題の流れ」「政策の流れ」「政治の流れ」という3つの異なる相互に独立した過程の混合物として捉え、これらが合流することによって政策変化が生じる契機がもたらされるとする。この契機を「政策の窓」と呼び、3つの流れを合流させて契機をもたらし、それを掴んで政策的な変化をもたらすためには、政策企業家(policy entrepreneur)が重要な役割を果たすと論じられる。\citep*{Kingdon1984-oq, Kingdon2013-ac}\\
+　このようなMSFモデルは、政策変化を説明するモデルとして有効であるとされ、議院内閣制の国における政策過程を含めた広い適用対象を包含するモデルとして様々な政策過程の分析において応用されてきた。\citep*{Rawat2016-ew,Jones2016-lc}\\
+　しかしながら、MSFモデルはその予測可能性の低さ\citep*{}や概念整理が不十分である\citep*{John2018-im}などの点から批判されてきた。MSFモデルは政策過程をめぐる極めて複雑な問題状況を整理する補助線を提供するという意味で極めて重要な貢献を果たした一方で、「3つの流れ」とされる概念間には十分な対応関係は存在せず、それぞれの流れが具体的にいかなる要素を内包しているのかも判然としない。MSFモデルを実際に用いた多くの分析において、概念や操作化に一貫性がない\citep*{Jones2016-lc}ことも、このモデルが原因と結果の関係を論じるというよりむしろ、問題状況の整理と認識のための枠組みという側面が強いことを示していると思われる。\\
+　JonesとBaumgartnerによる一連の研究\citep*{Baumgartner2010-rl, Baumgartner2020-ee, Baumgartner2009-eb}は政策変化の過程において一定期間の安定性と短期の急激な変動という特徴が存在することを指摘し、そうした現象が生じる要因を分析している。\\
 
-\subsection*{Focus Point in the Congress}
-　議会において、「法案が重要な関心をもたれる」という現象は、大きく二つの研究領域において検討されてきた。第一には政策過程論の文脈であり、いかなる法案が注目されるのかを外生的・内生的な要因から説明する試みである。第二に、議会研究の文脈では「どの法案が真剣な議論の対象となるのか」という問題設定から議会内政党に着目した分析が蓄積されてきた。\\
-　第一に、政策過程研究において特定の領域が注目されるアジェンダ・セッティングの議論が存在する。\\
-　第二に、議会研究においてどの法案が検討されるのかを問題にする、アジェンダ・コントロールの議論が存在する。アジェンダ・コントロール論において重要な問題関心は、議会内政党がどの程度まで影響力を行使しうるのかという問題であり、政党指導部が強い影響力を有するという立場\citep*{Cox2005-pn,Cox2007-xq}から議会内において重要なのは政党ではなく議会における中位投票者の立ち位置であるとする議論\citep*{Krehbiel2010-ob}までさまざまな理論的立場が示されている。近年の実証研究の見地では中位投票者による説明を支持するもの\citep*{Gray2019-sv}から両者の存在を指摘するもの\citep*{Crosson2019-xb}、議会内政党の影響力を強調するもの\citep*{Clark2012-lk}までさまざまである。\\
-　これらの議論は、議会において法案が注目される過程とその要因を説明する上で有益な視座を与える。しかし、重要な課題も存在する。\\
-　第一に、アジェンダ・コントロール論では、議会内における法案の動向を十分に把握することは困難である。例えば、アジェンダ・コントロールが発揮されるか否かは\\
-　第二に、より重要な問題として、
+\subsection{制度間差異の重要性}
+　ではなぜ、政策変化の分析を行う上で制度間差異が重要なのだろうか。断続均衡理論の貢献は、異なる領域における現象を政策変化という側面から切り出すことによって、共通の構造が存在していることを指摘した点にあると言える。これは、政策変化が展開する領域ごとの差異を捨象することによって共通のメカニズムを抽出する試みとして評価できる。\\
+　他方、裁判所や議会、大統領府、メディアなどといった異なる意思決定手続きを有する制度間の差異を捨象することは、各々の領域においてより具体的な現象に対する説明能力を低下させることを意味する。特に、意思決定手続きについての条件をモデルに組み込めないことは、政策変化の過程について、人間の認識など一般的に存在する制約以上の条件について論じることができないことを意味する。実際、\citep*{Baumgartner2010-rl}がモデルに組み込んでいる制約は人間の認知機能の限界に起因するものであり、例えば議会における法案のスケジュール管理権限など、個別具体的な領域における制度的建付はモデルに組み込まれていない。\\
+　このようなモデルの特徴は、複数国間の比較や議会と大統領などの異なる制度間における比較を行うという目的からすれば有益な特徴と言える。一方で、アメリカの政策過程などのように、単一の分析対象を目的とする分析においては必ずしも適切な枠組みとは言えない。\\
+　加えて、制度間差異を論じないことによる理論的な問題も生じていると考えられる。先述した通り、政策変化をもたらす「注目」の形成がいかにしてなされるのかについては十分に経験的知見が蓄積されているとは言い難い状況にある。これは、単に分析が困難であるということではなく、政策変化をもたらす具体的な過程が制度ごとの特性によって規定されていることによって、政策変化一般に観察される特徴が把握しにくいことに起因するのではないか。\\
+　異なる制度ごとに異なる意思決定手続きを有しているために、それぞれの領域において頻繁に観察される、政策変化の過程も異なるということは十分にありうると思われる。例えば、\citet*{Baumgartner1993-bc, Baumgartner2010-rl}の論じる政策的知識の更新とそれに伴って生じる政策変化というモデルは裁判所などのより専門性の高い意思決定手続きを有する集団における変化を説明するのに適していると考えられる。他方で、焦点となる出来事(focusing event)に着目し、その外性的インパクトを起点として政策の変化を論じるモデル\citep*{Birkland1997-lq, Birkland1998-xp,Sabatier1993-id,Bertelli2013-zq}などは議会や大統領などの有権者との関係に依存する制度の枠内でより効果を発揮するモデルであると考えられる。\\
+　政策変化は制度の固着性(stickyness)という側面に着目した場合に、断続均衡理論の提示するような類似の過程として認識するこができる一方で、そうした現象のもたらされ方については、制度の有する意思決定手続きの差異が重要な要因として機能していると考えられる。したがって、特定の政策領域が変化する要因を分析するためには、議会や裁判所、大統領府などといった異なる制度がいかなる過程を経て政策変化を生じさせているのかを論じる必要があると思われる。\\
+　以下では議会研究の知見を援用しつつ、政策に対する注目がいかなる条件のもとで形成されうるのか検討する。\\
+
+\subsection{議会における政策の「注目」}
+　アメリカ議会研究において、「法案が重要な関心をもたれる」という現象は議会内政党の役割を軸に議論が蓄積されてきた。ひとつの極にある議論はアメリカ議会に政党は存在しないとする立場であり、\citet*{Krehbiel2010-ob}の提唱したPivotal Politics論がその典型である。もうひとつの極には議会における政党指導部の役割を強調する議論が存在し、条件付き政党政府論(Conditional Party Government)\citep*{Rohde1991-da, Aldrich1995-xf}やカルテル政党論(Cartel Party Theory)\citep*{Cox2005-pn,Cox2007-xq}などの議論が存在している。\\
+　議会における政党の役割を重視しないPivotal Politics論では、議会における議決行動に着目し、審議の膠着状況(gridlock)が常にではないが恒常的に生じる現象と議決における過大連合の形成を拒否権と議事妨害(filibuster)とへの対抗に必要な議席数の幅から説明する。\citep*{Krehbiel2010-ob}\\
+　条件付き政党政府論は議会における政党の役割を、多数党の政党指導部が自らの政党の指示を得ている場合に、法案審議を推し進める権限を行使していると論じる。\\
+　カルテル政党論は、多数党の政党指導部が議会の議事手続きを管理することを通じて、議場で審議される内容を管理し、多数党の多数派が望まない法案が審議の俎上に上がることを防ぐ消極的なアジェンダ・コントロール権能(negative agenda control)を有していると指摘する。\citep*{Cox2005-pn}\\
+　このような政党の存在をめぐる理論的議論に対して、数多くの研究が経験的な知見により実証を試みてきた。分析結果については必ずしも一貫した結論が出ているとは言い難い\footnote{この点に関する経験的知見としては}ものの、特に近年の分極化した議会において政党指導部が議事手続きを通じて議会で論じられる政策争点をコントロールしていることは事実であろう。\citep*{Sinclair1997-jm, Sinclair2016-kh,Rosenthal2008-xb, Peters2010-ve}\\
 
 \section*{Theory}
 　では、議会において特定の法案が重要視されるためには、いかなる条件が必要だろうか。第一に、議会研究の文脈では法案は議会指導部によって多数派政党に都合の良い形でスクリーニングされると考えられてきた。
