--- a/writings/reference.bib
+++ b/writings/reference.bib
@@ -48,6 +48,40 @@
                analysis; North America; United States"
 }
 
+
+@BOOK{Aldrich1995-xf,
+  title     = "Why Parties?: The Origin and Transformation of Political Parties
+               in America",
+  author    = "Aldrich, John H",
+  abstract  = "Why did the United States develop political parties? How and why
+               do party alignments change? Are the party-centered elections of
+               the past better for democratic politics than the
+               candidate-centered elections of the present? In this landmark
+               book, John Aldrich goes beyond the clamor of arguments over
+               whether American political parties are in resurgence or decline
+               and undertakes a wholesale reexamination of the foundations of
+               the American party system. Surveying three critical episodes in
+               the development of American political parties---from their
+               formation in the 1790s to the Civil War---Aldrich shows how
+               parties serve to combat three fundamental problems of democracy:
+               how to regulate the number of people seeking public office; how
+               to mobilize voters; and how to achieve and maintain the
+               majorities needed to accomplish goals once in office. Overcoming
+               these obstacles, argues Aldrich, is possible only with political
+               parties. Aldrich brings this innovative account up to date by
+               looking at the profound changes in the character of political
+               parties since World War II. In the 1960s, he shows, parties
+               started to become candidate-centered organizations that are
+               servants to their office seekers and officeholders. Aldrich
+               argues that this development has revitalized parties, making
+               them stronger, and more vital, with well-defined cleavages and
+               highly effective governing ability.",
+  publisher = "University of Chicago Press",
+  month     =  jun,
+  year      =  1995,
+  language  = "en"
+}
+
 @INCOLLECTION{Baumgartner2009-eb,
   title     = "Lobbying and policy change",
   booktitle = "Lobbying and Policy Change",
@@ -101,6 +135,32 @@
                interest groups; lobbying; intrusiveness; media; confirmation
                bias; spending; funding; federalism; agencies; defense;
                complexity; censorship; budget; nonfiction; history; politics",
+  language  = "en"
+}
+
+@BOOK{Baumgartner1993-bc,
+  title     = "Agendas and Instability in American Politics",
+  author    = "Baumgartner, Frank R and Jones, Bryan D",
+  abstract  = "In this innovative account of the way policy issues rise and
+               fall on the national agenda---the first detailed study of so
+               many issues over an extended period---Frank R. Baumgartner and
+               Bryan D. Jones show that rapid change not only can but does
+               happen in the hidebound institutions of government. Short-term,
+               single-issue analyses of public policy, the authors contend,
+               give a narrow and distorted view of public policy as the result
+               of a cozy arrangement between politicians, interest groups, and
+               the media. Baumgartner and Jones upset these notions by focusing
+               on several issues---including civilian nuclear power, urban
+               affairs, smoking, and auto safety---over a much longer period of
+               time to reveal patterns of stability alternating with bursts of
+               rapid, unpredictable change. A welcome corrective to
+               conventional political wisdom, Agendas and Instability revises
+               our understanding of the dynamics of agenda-setting and
+               clarifies a subject at the very center of the study of American
+               politics.",
+  publisher = "University of Chicago Press",
+  month     =  apr,
+  year      =  1993,
   language  = "en"
 }
 
@@ -250,6 +310,33 @@
   year     =  2012
 }
 
+@ARTICLE{Cohen1972-ym,
+  title     = "A Garbage Can Model of Organizational Choice",
+  author    = "Cohen, Michael D and March, James G and Olsen, Johan P",
+  abstract  = "[Organized anarchies are organizations characterized by
+               problematic preferences, unclear technology, and fluid
+               participation. Recent studies of universities, a familiar form
+               of organized anarchy, suggest that such organizations can be
+               viewed for some purposes as collections of choices looking for
+               problems, issues and feelings looking for decision situations in
+               which they might be aired, solutions looking for issues to which
+               they might be an answer, and decision makers looking for work.
+               These ideas are translated into an explicit computer simulation
+               model of a garbage can decision process. The general
+               implications of such a model are described in terms of five
+               major measures on the process. Possible applications of the
+               model to more narrow predictions are illustrated by an
+               examination of the model's predictions with respect to the
+               effect of adversity on university decision making.]",
+  journal   = "Adm. Sci. Q.",
+  publisher = "[Sage Publications, Inc., Johnson Graduate School of Management,
+               Cornell University]",
+  volume    =  17,
+  number    =  1,
+  pages     = "1--25",
+  year      =  1972
+}
+
 @BOOK{Cox2007-xq,
   title     = "Legislative Leviathan: Party Government in the House",
   author    = "Cox, Gary W and McCubbins, Mathew D",
@@ -388,6 +475,51 @@
 
 % The entry below contains non-ASCII chars that could not be converted
 % to a LaTeX equivalent.
+@ARTICLE{Jones2016-lc,
+  title     = "A river runs through it: A multiple streams meta-review",
+  author    = "Jones, Michael D and Peterson, Holly L and Pierce, Jonathan J
+               and Herweg, Nicole and Bernal, Amiel and Lamberta Raney, Holly
+               and Zahariadis, Nikolaos",
+  abstract  = "This study uses content analysis of recent Multiple Streams
+               Approach (MSA) research to determine the scope of MSA
+               applications, examining the consistency, and coherence with
+               which concepts of MSA are applied. Our analysis examines
+               peer‐reviewed articles testing MSA concepts available in English
+               published from 2000 through 2013 (N= 311). Among other findings,
+               we observe that MSA is applied to study 65 different countries,
+               at multiple levels of governance, across 22 different policy
+               areas, and by researchers spanning the …",
+  journal   = "Policy Stud. J.",
+  publisher = "Wiley",
+  volume    =  44,
+  number    =  1,
+  pages     = "13--36",
+  month     =  feb,
+  year      =  2016,
+  language  = "en"
+}
+
+@BOOK{Kingdon1984-oq,
+  title     = "Agendas, alternatives, and public policies",
+  author    = "Kingdon, John W",
+  publisher = "Little, Brown",
+  year      =  1984,
+  address   = "Boston"
+}
+
+@BOOK{Kingdon2013-ac,
+  title     = "Agendas, alternatives, and public policies, update edition, with
+               an epilogue on health care: Pearson new international edition",
+  author    = "Kingdon, John W",
+  publisher = "Pearson Education",
+  edition   =  2,
+  month     =  nov,
+  year      =  2013,
+  address   = "London, England"
+}
+
+% The entry below contains non-ASCII chars that could not be converted
+% to a LaTeX equivalent.
 @INCOLLECTION{Krehbiel2010-ob,
   title     = "Pivotal politics",
   booktitle = "Pivotal Politics",
@@ -400,9 +532,130 @@
   year      =  2010
 }
 
+% The entry below contains non-ASCII chars that could not be converted
+% to a LaTeX equivalent.
+@ARTICLE{Rawat2016-ew,
+  title     = "Kingdon's ``streams'' model at thirty: Still relevant in the
+               21st century?",
+  author    = "Rawat, Pragati and Morris, John Charles",
+  abstract  = "John Kingdon's multiple‐streams model, developed to explain the
+               policy formulation process, is often cited in the policy
+               literature, and remains a staple of policy courses. In spite of
+               critiques suggesting Kingdon's work is theoretically shaky and
+               difficult to observe empirically, the work seems to retain a
+               prominent place in the policy literature, garnering hundreds of
+               citations since its publication. This article provides a review
+               of the literature employing Kingdon's work, from 1984 to the
+               present. The results show that the model has …",
+  journal   = "Polit. Policy",
+  publisher = "Wiley",
+  volume    =  44,
+  number    =  4,
+  pages     = "608--638",
+  month     =  aug,
+  year      =  2016,
+  language  = "en"
+}
+
+@BOOK{Rohde1991-da,
+  title     = "Parties and leaders in the postreform house",
+  author    = "Rohde, David W",
+  publisher = "University of Chicago Press",
+  year      =  1991,
+  address   = "Chicago",
+  language  = "en"
+}
+
+@ARTICLE{Rosenthal2008-xb,
+  title     = "Who is Nancy Pelosi?",
+  author    = "Rosenthal, Cindy Simon and Peters, Ronald M",
+  abstract  = "Who is Nancy Pelosi? - Volume 41 Issue 1",
+  journal   = "PS Polit. Sci. Polit.",
+  publisher = "Cambridge University Press",
+  volume    =  41,
+  number    =  1,
+  pages     = "57--62",
+  month     =  jan,
+  year      =  2008
+}
+
+@BOOK{Peters2010-ve,
+  title     = "Speaker Nancy Pelosi and the New American Politics",
+  author    = "Peters, Jr, Ronald M and Rosenthal, Cindy Simon",
+  abstract  = "When the Democrats retook control of the U.S. House of
+               Representatives in January 2007 after twelve years in the
+               wilderness, Nancy Pelosi became the first woman speaker in
+               American history. In Speaker Nancy Pelosi and the New American
+               Politics, Ron Peters, one of America's leading scholars of
+               Congress, and Cindy Simon Rosenthal, one of America's leading
+               scholars on women and political leadership, provide a
+               comprehensive account of how Pelosi became speaker and what this
+               tells us about Congress in the twenty-first century. They
+               consider the key issues that Pelosi's rise presents for American
+               politics, highlight the core themes that have shaped, and
+               continue to shape, her remarkable caree, and discuss the
+               challenges that women face in the male-dominated world of
+               American politics, particularly at its highest levels. The
+               authors also shed light on Pelosi's political background: first
+               as the scion of a powerful Baltimore political family whose
+               power base lay in East Coast urban ethnic politics, and later as
+               a successful politician in what is probably the most liberal
+               city in the country, San Francisco. Peters and Rosenthal trace
+               how she built her base within the House Democratic Caucus and
+               ultimately consolidated enough power to win the Speakership.
+               They show how twelve years out of power allowed her to fashion a
+               new image for House Democrats, and they conclude with an
+               analysis of her institutional leadership style. The only
+               full-length portrait of Nancy Pelosi in print, this superb
+               volume offers a vivid and insightful analysis of one of
+               America's most remarkable politicians.",
+  publisher = "Oxford University Press",
+  month     =  apr,
+  year      =  2010,
+  language  = "en"
+}
+
 @BOOK{Sabatier1993-id,
   title     = "Policy change and learning: An advocacy coalition approach",
   author    = "Sabatier, Paul A and Jenkins-Smith, Hank C",
   publisher = "Westview press",
   year      =  1993
+}
+
+@BOOK{Sinclair1997-jm,
+  title     = "Unorthodox lawmaking: new legislative processes in the {U.S}.
+               Congress",
+  author    = "Sinclair, Barbara",
+  publisher = "CQ Press.",
+  year      =  1997,
+  address   = "Washington, DC",
+  language  = "en"
+}
+
+@BOOK{Sinclair2016-kh,
+  title     = "Unorthodox Lawmaking: New Legislative Processes in the {U.S}.
+               Congress",
+  author    = "Sinclair, Barbara",
+  abstract  = "Most major measures wind their way through the contemporary
+               Congress in what Barbara Sinclair has dubbed ``unorthodox
+               lawmaking.'' In this much-anticipated Fifth Edition of
+               Unorthodox Lawmaking, Sinclair explores the full range of
+               special procedures and processes that make up Congress's work,
+               as well as the reasons these unconventional routes evolved. The
+               author introduces students to the intricacies of Congress and
+               provides the tools to assess the relative successes and
+               limitations of the institution. This dramatically updated
+               revision incorporates a wealth of new cases and examples to
+               illustrate the changes occurring in congressional process. Two
+               entirely new case study chapters---on the 2013 government
+               shutdown and the 2015 reauthorization of the Patriot
+               Act---highlight Sinclair's fresh analysis and the book is now
+               introduced by a new foreword from noted scholar and teacher,
+               Bruce I. Oppenheimer, reflecting on this book and Barbara
+               Sinclair's significant mark on the study of Congress.",
+  publisher = "CQ Press",
+  edition   =  5,
+  month     =  jul,
+  year      =  2016,
+  language  = "en"
 }
